--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
 }
