--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".ListActivity"></activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.vkdisk.konstantin.vkdisk_mobile.provider"
+            android:authorities="com.vkdisk.konstantin.vkdisk_mobile.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
